infra-manifests/apps/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: 192.168.91.130:3000/gitea/demo-app-src/demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
